--- a/onepercent-bgs.ipynb
+++ b/onepercent-bgs.ipynb
@@ -1300,6 +1300,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Huh?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Done."
    ]
   }
